src/main/app/src/styles.less
/*
 * SPDX-FileCopyrightText: 2021 - 2022 Atos, 2024-2025 INFO.nl
 * SPDX-License-Identifier: EUPL-1.2+
 */

/* You can add global styles to this file, and also import other style files */
@import "variables";
@import "bootstrap/dist/css/bootstrap-grid.min.css";

html,
body {
  height: 100%;
}

.material-symbols-outlined {
  font-family: "Material Symbols Outlined";
  font-weight: normal;
  font-style: normal;
  font-size: 24px; /* Preferred icon size */
  display: inline-block;
  line-height: 1;
  text-transform: none;
  letter-spacing: normal;
  word-wrap: normal;
  white-space: nowrap;
  direction: ltr;
}

body {
  --mat-radio-state-layer-size: 24px;
  margin: 0;
  font-family: Roboto, "Helvetica Neue", sans-serif;
  font-size: 14px;
  line-height: 20px;
  font-weight: normal;
  overscroll-behavior-y: contain;
}

button.mat-mdc-button-base {
  margin-right: 6px;
}

.mat-datepicker-toggle-default-icon {
  scale: 75%;
}

mat-drawer {
  max-width: @xl;
}

mat-drawer-container {
  height: calc(100% - 68px);

  .mat-drawer-content {
    padding: 12px;
  }
}

mat-drawer-container.over mat-drawer-content {
  margin-left: 67px;
}

mat-sidenav-container {
  height: calc(100% - 68px);
}

.side-nav-container {
  min-width: 900px;
}

.pagination-wrapper {
  display: flex;
  align-items: center;
  justify-content: flex-end;
  background-color: white;
}

.full-width {
  width: 100%;
}

.form {
  padding: 8px 16px 8px 16px;
}

.table-wrapper {
  overflow-x: auto;

  table {
    width: 100%;

    th {
      padding-left: 10px;
      border-bottom-width: 1px;
      color: rgba(0, 0, 0, 0.54);

      mat-form-field {
        font-size: 12px;
        width: 100%;

        .mat-mdc-floating-label {
          font-size: 12px;
        }

        .mat-mdc-text-field-wrapper {
          padding-left: 0;
          background-color: #ffffff;
        }

        .mat-mdc-form-field-infix {
          width: auto;
        }
      }
    }

    tr.collapsed-row {
      height: 0;
    }

    tr.cdk-row {
      &:not(.expanded-row):hover {
        background: @table-hover-background-color;
      }

      & td {
        padding: 0 0 0 10px;
        border-bottom-width: 0;
      }
    }

    tr.mat-mdc-row.document-preview {
      height: 0;

      & td {
        border: none;
      }
    }
  }

  p {
    font-size: small;
    font-style: italic;
    text-align: center;
  }
}

.pagination-wrapper {
  bottom: 0;
  position: sticky;
  z-index: 10;
}

.filter-menu {
  #deleteZoekopdracht:hover {
    color: #ff4081;
  }
}

.mat-mdc-select,
.mat-mdc-option {
  font-size: 12px;
}

.mat-mdc-option {
  font-size: 12px;

  .mdc-list-item__primary-text {
    display: flex;
    flex-direction: row;
    width: 100%;
    justify-content: space-between;
  }
}

mat-paginator[sticky] {
  bottom: 0;
  position: sticky;
  z-index: 10;
}

.loading {
  cursor: not-allowed;

  & > * {
    pointer-events: none;
  }

  table {
    opacity: 0.7;
    background-color: fade(white, 10%);
  }
}

.content {
  padding: 10px;
}

.info {
  color: @info-color;
}

.error {
  color: @error-color;
}

.warning {
  color: @warning-color;
}

.gold-star {
  color: orange;
}

//tablet portrait
@media (max-width: 839px) {
  .bottom-toolbar {
    height: 50px;
  }

  mat-drawer-container.tablet-bottom-toolbar {
    height: calc(100% - 116px);
  }
}

//telefoon
@media (max-width: 599px) {
  mat-drawer-container {
    height: calc(100% - 56px);

    &.tablet-bottom-toolbar {
      height: calc(100% - 108px);
    }
  }
}

.mat-mdc-card {
  .mat-mdc-card-header .mat-mdc-card-title {
    font-size: 14px;
  }

  .mat-mdc-card-title-group .mat-mdc-card-title {
    font-size: 14px;
  }
}

[mat-subheader] {
  & mat-icon {
    flex-shrink: 0;
    width: 24px;
    height: 24px;
    font-size: 24px;
    box-sizing: content-box;
    border-radius: 50%;
    padding: 4px;
  }
}

.cdk-drag-preview {
  box-sizing: border-box;
  border-radius: 4px;
  box-shadow:
    0 5px 5px -3px rgba(0, 0, 0, 0.2),
    0 8px 10px 1px rgba(0, 0, 0, 0.14),
    0 3px 14px 2px rgba(0, 0, 0, 0.12);
}

.cdk-drop-list-dragging .cdk-drag {
  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
}

.cdk-drag-animating {
  transition: transform 300ms cubic-bezier(0, 0, 0.2, 1);
}

.cdk-drag-placeholder {
  opacity: 0.6;
}

.mat-mdc-icon.spinner {
  position: absolute;
  top: 50%;
  left: 50%;
  margin-top: -10px;
  margin-left: -10px;
}

.pointer {
  cursor: pointer;
}

.mat-expansion-panel-header-title,
.mat-expansion-panel-header-description {
  font-size: 14px;
  margin: 0 12px;
  color: #000;
  flex-basis: 0;
}

.mat-expansion-panel-header-description {
  justify-content: space-between;
  align-items: center;
}

.mat-expansion-panel-header-title {
  font-weight: 500;
}

.mat-expansion-panel-header {
  height: 50px;
}

.table-container {
  position: relative;

  .table-loading-shade {
    position: absolute;
    top: 0;
    left: 0;
    bottom: 56px; /* paging */
    right: 0;
    background: rgba(0, 0, 0, 0.05);
    z-index: 2; /* stickyEnd +1 */
    display: flex;
    align-items: center;
    justify-content: center;
  }
}

.mat-mdc-tab-list {
  .mdc-tab {
    padding-left: 16px;
    padding-right: 16px;
  }
}

.mat-mdc-tab-nav-bar,
.mat-mdc-tab-header {
  .mat-icon {
    margin-right: 10px;
  }
}

.tooltip-list {
  white-space: pre;
}

.mdc-snackbar.mat-mdc-snack-bar-container.mat-snackbar {
  position: fixed;
  top: 4.5em;
  bottom: auto;
}

.mdc-snackbar__surface {
  overflow: clip;
}

mat-icon {
  font-variation-settings: "FILL" 1;
}

mat-icon[outlined] {
  font-variation-settings: "FILL" 0;
}

.material-icons-outlined {
  font-variation-settings: "FILL" 0;
}

.mdc-tooltip {
  white-space: pre-line;
}

.tooltip-wide .mdc-tooltip__surface {
  max-width: 400px;
}

.mat-narrow-checkbox {
  --mat-checkbox-touch-target-size: 24px;
  --mat-checkbox-state-layer-size: 24px;

  .mat-mdc-checkbox-touch-target {
    width: 24px;
    height: 24px;
  }

  .mat-checkbox-layout {
    width: 24px;
    height: 24px;
  }
}

.mat-mdc-menu-panel.mat-mdc-menu-panel.editor-variabelen-menu {
  max-width: none;
  max-height: 300px;
}

.mat-mdc-chip.mat-success {
  .mat-mdc-chip-action {
    &:before {
      background-color: @success-background-color;
    }

    .mat-mdc-chip-action-label {
      color: @success-text-color;
    }
  }
}

.form-field-hint {
  margin-bottom: 22px;
}

mat-hint {
  color: var(--mat-form-field-filled-label-text-color);
}

/* dialog title */
.mat-mdc-dialog-container .mdc-dialog__container .mdc-dialog__title {
  display: flex;
}

.mat-mdc-dialog-container .mat-mdc-dialog-title + .mat-mdc-dialog-content {
  padding-top: 20px !important;
}

.mdc-dialog__container .mdc-dialog__title::before {
  content: none;
}

h1 {
  font-size: 18px;
  font-weight: 600;
}

h2 {
  font-size: 16px;
  font-weight: 500;
}

h3 {
  font-size: 14px;
  font-weight: 400;
}

h4,
h5,
h6 {
  font-size: 14px;
  font-weight: initial;
}

form > mat-card > mat-card-content > fieldset,
form > fieldset {
  display: flex;
  flex-direction: column;
  gap: 12px;
  margin: 0;
  padding: 0 16px;
}

form > mat-card > mat-card-content > fieldset {
  padding: 0;
}

mat-dialog-content form > fieldset {
  padding: 0;
}

form fieldset {
  border: 0;
}

// Overwrite the bootstrap grid `row` class
table tr.row {
  display: table-row;
}

mat-drawer form {
  min-width: @sm;
}

